# algorithms-practice

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/data_structures/: BinaryTree.h  DoublyLinkedList.h  Heap.h  LinkedList.h
include/data_structures/inl/: BinaryTree.inl  DoublyLinkedList.inl  Heap.inl  LinkedList.inl
include/sorting/: ListSort.h
src/: CMakeLists.txt
src/sorting/: ListSort.cpp
test/: CMakeLists.txt  tests.cpp
test/data_structures/: BinaryTreeTest.cpp  DoublyLinkedListTest.cpp  HeapTest.cpp  LinkedListTest.cpp
test/scripts/: build_and_run.sh
test/sorting/: ListSortTest.cpp
